[tool.poetry]
name = "AIML440_code"
description = "Experiments and code for AIML440 project"
authors = ["1jamesthompson1 <1jamesthompson1@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
torch = "^2.6.0"
swig = "^4.3.0"
matplotlib = "^3.10.1"
jupyter = "^1.1.1"
gymnasium = {extras = ["classic-control", "mujoco", "box2d", "other"], version = "^1.1.1"}
ipykernel = "^6.29.5"
generals-bots = "^2.2.1"
stable-baselines3 = {extras = ["extra"], version = "^2.5.0"}
tqdm = "^4.67.1"
notebook = "^7.3.3"
cython = "^3.0.12"
sbx-rl = "^0.20.0"
jax = {extras = ["cuda12"], version = "^0.5.3"}
rich = "^14.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
